# mlir

./: README.md
examples/toy/Ch2/mlir/: Dialect.cpp
examples/toy/Ch4/: CMakeLists.txt  toyc.cpp
examples/toy/Ch4/include/toy/: Dialect.h  Ops.td  Passes.h
examples/toy/Ch4/mlir/: DeadFunctionEliminationPass.cpp  Dialect.cpp  ShapeInferencePass.cpp
examples/toy/Ch6/: CMakeLists.txt  toyc.cpp
examples/toy/Ch6/include/toy/: Lowering.h  Ops.td
examples/toy/Ch6/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp
g3doc/: DefiningAttributesAndTypes.md
g3doc/Tutorials/Toy/: Ch-4.md  Ch-6.md
include/mlir/IR/: OpBase.td
include/mlir/Transforms/: Passes.h
lib/Transforms/: Inliner.cpp
test/: CMakeLists.txt
test/Examples/Toy/Ch6/: affine-lowering.mlir  ast.toy  lowering.toy
